-adicionado arquivo de definições globais, direcionando definições globais para dentro do arquivo -adicionada função de inicialização de modos -adicionadas tasks para cada função da ECU

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -80,6 +80,7 @@ PD12.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_Label
 NVIC.TimeBaseIP=TIM3
 PA10.Signal=LPUART1_RX
+FREERTOS.FootprintOK=true
 PE12.GPIO_Label=S_VEL1
 RCC.DFSDMFreq_Value=75000000
 PA5.GPIOParameters=GPIO_Label
@@ -107,7 +108,7 @@ PCC.Seq0.Step0.Category=Interpolation
 PD6.GPIOParameters=GPIO_Label
 ProjectManager.ProjectFileName=ECU.ioc
 Dma.ADC1.0.Instance=DMA1_Stream0
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;t_controle,8,128,controle,As external,NULL,Dynamic,NULL,NULL;t_comando_inver,8,128,comando_inversor,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,128,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,128,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,128,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,128,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,128,odometer_calc,As external,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=41
 Dma.ADC1.0.SyncRequestNumber=1
@@ -268,7 +269,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
 GPIO.groupedBy=
