Base das tarefas, mudança de pinos no cube
adicionado código base das tarefas, mas que ainda precisam ser adaptados
mudanças nas labels dos pinos no cube

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -8,7 +8,7 @@ SH.GPXTI14.0=GPIO_EXTI14
 RCC.PLLFRACN=3072
 PD3.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
-PA6.GPIO_Label=S_APPS2
+PA6.GPIO_Label=S_APPS1
 RCC.CpuClockFreq_Value=75000000
 PD4.Locked=true
 SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
@@ -52,7 +52,7 @@ MxDb.Version=DB.5.0.60
 PE15.Locked=true
 ProjectManager.BackupPrevious=false
 RCC.FMCFreq_Value=75000000
-PC4.GPIO_Label=S_FREIO
+PC4.GPIO_Label=S_VOLANTE
 PB1.GPIO_Label=S_ADC_E2
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 RCC.USART16Freq_Value=75000000
@@ -184,7 +184,7 @@ Mcu.Pin20=PC9
 ADC1.master=1
 PE13.GPIO_Label=S_VEL2
 Mcu.Pin21=PA8
-PA5.GPIO_Label=S_APPS1
+PA5.GPIO_Label=S_APPS2
 NVIC.ForceEnableDMAVector=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PE5.GPIO_Label=C_LED_DEBUG2
@@ -409,7 +409,7 @@ ProjectManager.CoupleFile=false
 PCC.Seq0.Step0.Memory=SRAM1
 RCC.SYSCLKFreq_VALUE=75000000
 RCC.I2C123Freq_Value=75000000
-PA7.GPIO_Label=S_VOLANTE
+PA7.GPIO_Label=S_FREIO
 PA12.Mode=FDCANMaster
 SH.GPXTI4.0=GPIO_EXTI4
 ADC1.Rank-3\#ChannelRegularConversion=4
