--- a/ECU.ioc
+++ b/ECU.ioc
@@ -1,15 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
 PD7.Mode=Full_Duplex_Master
 PCC.Series=STM32H7
+FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL
 PD12.GPIO_Label=C_LED_BLUE
 SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 SH.GPXTI14.0=GPIO_EXTI14
-RCC.PLLFRACN=3072
+RCC.PLLFRACN=0
 PD3.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=S_APPS1
-RCC.CpuClockFreq_Value=75000000
+RCC.CpuClockFreq_Value=144000000
 PD4.Locked=true
 SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
 PB13.Signal=FDCAN2_TX
@@ -18,22 +19,22 @@ PinOutPanel.RotationAngle=0
 PE6.GPIO_Label=C_LED_DEBUG3
 RCC.MCO1PinFreq_Value=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.AHB4Freq_Value=75000000
+RCC.AHB4Freq_Value=72000000
 SH.GPXTI13.0=GPIO_EXTI13
-RCC.LPTIM1Freq_Value=75000000
+RCC.LPTIM1Freq_Value=72000000
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 SH.GPXTI3.ConfNb=1
 PCC.PartNumber=STM32H743VITx
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_19
 SPI1.Direction=SPI_DIRECTION_2LINES
-RCC.I2C4Freq_Value=75000000
-TIM2.IPParameters=Prescaler
+RCC.I2C4Freq_Value=72000000
+TIM2.IPParameters=Prescaler,Period
 PD4.Signal=GPXTI4
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
-RCC.DIVQ3Freq_Value=129000000
-SPI1.CalculateBaudRate=292.968 KBits/s
+RCC.DIVQ3Freq_Value=16125000
+SPI1.CalculateBaudRate=281.25 KBits/s
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 FREERTOS.configMINIMAL_STACK_SIZE=64
@@ -44,18 +45,18 @@ NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PCC.Seq0.Step0.Voltage_Source=Battery
-RCC.DIVM2=4
-RCC.DIVM1=4
+RCC.DIVM2=1
+RCC.DIVM1=1
 SH.GPXTI12.0=GPIO_EXTI12
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.7.0
 MxDb.Version=DB.5.0.60
 PE15.Locked=true
 ProjectManager.BackupPrevious=false
-RCC.FMCFreq_Value=75000000
+RCC.FMCFreq_Value=72000000
 PC4.GPIO_Label=S_VOLANTE
 PB1.GPIO_Label=S_ADC_E2
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-RCC.USART16Freq_Value=75000000
+RCC.USART16Freq_Value=72000000
 PE4.GPIO_Label=C_LED_DEBUG1
 PC9.Mode=I2C
 PA8.Signal=I2C3_SCL
@@ -68,10 +69,10 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
 RCC.DIVP2Freq_Value=150000000
 SH.ADCx_INP3.0=ADC1_INP3,IN3-Single-Ended
 SH.ADCx_INP4.ConfNb=1
-RCC.MCO2PinFreq_Value=75000000
+RCC.MCO2PinFreq_Value=144000000
 ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
 Mcu.Package=LQFP100
-TIM2.Prescaler=1799
+TIM2.Prescaler=0
 PB1.Signal=ADCx_INP5
 PA5.Locked=true
 NVIC.TimeBase=TIM3_IRQn
@@ -82,16 +83,16 @@ NVIC.TimeBaseIP=TIM3
 PA10.Signal=LPUART1_RX
 FREERTOS.FootprintOK=true
 PE12.GPIO_Label=S_VEL1
-RCC.DFSDMFreq_Value=75000000
+RCC.DFSDMFreq_Value=72000000
 PA5.GPIOParameters=GPIO_Label
 SH.GPXTI14.ConfNb=1
-RCC.TraceFreq_Value=75000000
-RCC.APB4Freq_Value=75000000
+RCC.TraceFreq_Value=144000000
+RCC.APB4Freq_Value=72000000
 RCC.CECFreq_Value=32000
-RCC.SAI23Freq_Value=75000000
+RCC.SAI23Freq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-RCC.LPUART1Freq_Value=75000000
+RCC.LPUART1Freq_Value=72000000
 TIM1.Period=4000
 PB13.Mode=FDCANSlave
 PE6.Locked=true
@@ -102,39 +103,40 @@ ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Label
 Dma.ADC1.0.EventEnable=DISABLE
 ADC1.Rank-4\#ChannelRegularConversion=5
-RCC.VCO3OutputFreq_Value=258000000
+RCC.VCO3OutputFreq_Value=32250000
 PA6.GPIOParameters=GPIO_Label
 PCC.Seq0.Step0.Category=Interpolation
 PD6.GPIOParameters=GPIO_Label
 ProjectManager.ProjectFileName=ECU.ioc
 Dma.ADC1.0.Instance=DMA1_Stream0
+RCC.DIVQ1=4
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;t_controle,8,128,controle,As external,NULL,Dynamic,NULL,NULL;t_comando_inver,8,128,comando_inversor,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,128,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,128,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,128,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,128,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,128,odometer_calc,As external,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=41
 Dma.ADC1.0.SyncRequestNumber=1
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,master,Resolution
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.SWPMI1Freq_Value=75000000
+RCC.SWPMI1Freq_Value=72000000
 PD3.Signal=GPXTI3
 PD13.GPIOParameters=GPIO_Label
 PD7.Signal=SPI1_MOSI
 RCC.DIVP2=1
 PCC.Line=STM32H743/753
-RCC.QSPIFreq_Value=75000000
+RCC.QSPIFreq_Value=72000000
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-RCC.D1CPREFreq_Value=75000000
+RCC.D1CPREFreq_Value=144000000
 SH.GPXTI6.ConfNb=1
 PB8.GPIO_Label=BOOT1
-RCC.USART234578Freq_Value=75000000
+RCC.USART234578Freq_Value=72000000
 PCC.MCU=STM32H743VITx
-RCC.Tim1OutputFreq_Value=75000000
-RCC.SPI123Freq_Value=75000000
+RCC.Tim1OutputFreq_Value=72000000
+RCC.SPI123Freq_Value=72000000
 Dma.ADC1.0.SignalID=NONE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 PA9.Signal=LPUART1_TX
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-RCC.DIVN2=9
-RCC.DIVN1=9
+RCC.DIVN2=18
+RCC.DIVN1=36
 PB5.Locked=true
 SH.ADCx_INP8.0=ADC1_INP8,IN8-Single-Ended
 SH.ADCx_INP5.ConfNb=1
@@ -143,7 +145,7 @@ Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
 PE13.GPIOParameters=GPIO_Label
 ProjectManager.LastFirmware=true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-RCC.AHB12Freq_Value=75000000
+RCC.AHB12Freq_Value=72000000
 PE14.Signal=GPXTI14
 PE15.Signal=GPXTI15
 PCC.Seq0.Step0.Vcore=VOS1\: Scale1-High
@@ -163,9 +165,10 @@ Mcu.Pin34=PB4 (NJTRST)
 Mcu.Pin31=PD6
 Mcu.Pin32=PD7
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+TIM2.Period=0xFFFFFFFF
 PB4\ (NJTRST).Mode=Full_Duplex_Master
 ProjectManager.FreePins=false
-RCC.LPTIM2Freq_Value=75000000
+RCC.LPTIM2Freq_Value=72000000
 Mcu.Pin26=PA13 (JTMS/SWDIO)
 Mcu.Pin27=PA14 (JTCK/SWCLK)
 Mcu.Pin24=PA11
@@ -201,11 +204,11 @@ Mcu.Pin14=PE15
 Mcu.Pin19=PD14
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
 SH.GPXTI15.ConfNb=1
-RCC.LPTIM345Freq_Value=75000000
+RCC.LPTIM345Freq_Value=72000000
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PD12
 Mcu.Pin18=PD13
-RCC.LTDCFreq_Value=129000000
+RCC.LTDCFreq_Value=16125000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PE12
 Mcu.Pin12=PE13
@@ -214,7 +217,7 @@ Mcu.Pin10=PB1
 SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
 PA8.Mode=I2C
 PE12.GPIOParameters=GPIO_Label
-RCC.HCLK3ClockFreq_Value=75000000
+RCC.HCLK3ClockFreq_Value=72000000
 PCC.Seq0=1
 PA7.GPIOParameters=GPIO_Label
 ADC1.Rank-5\#ChannelRegularConversion=6
@@ -222,10 +225,11 @@ PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 Mcu.Family=STM32H7
 RCC.DIVQ2Freq_Value=75000000
 ProjectManager.MainLocation=Core/Src
-RCC.SAI1Freq_Value=75000000
-RCC.CortexFreq_Value=75000000
+RCC.SAI1Freq_Value=72000000
+RCC.CortexFreq_Value=144000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32H743VITx
+RCC.HPRE=RCC_HCLK_DIV2
 PCC.Seq0.Step0.CPU_Frequency=72000000 Hz
 Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -235,14 +239,14 @@ ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PA11.Mode=FDCANMaster
 PD6.Locked=true
-RCC.PLL2FRACN=3072
+RCC.PLL2FRACN=6144
 RCC.VCO2OutputFreq_Value=150000000
 NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PE5.GPIOParameters=GPIO_Label
 ProjectManager.StackSize=0x400
 PB5.GPIOParameters=GPIO_Label
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-RCC.VCOInput3Freq_Value=2000000
+RCC.VCOInput3Freq_Value=250000
 PD13.Signal=GPIO_Output
 Mcu.IP4=FDCAN1
 Mcu.IP5=FDCAN2
@@ -255,33 +259,33 @@ PA12.Signal=FDCAN1_TX
 PE4.GPIOParameters=GPIO_Label
 TIM1.Prescaler=1799
 Mcu.UserConstants=
-RCC.DIVP3Freq_Value=129000000
-RCC.SDMMCFreq_Value=75000000
+RCC.DIVP3Freq_Value=16125000
+RCC.SDMMCFreq_Value=72000000
 SH.GPXTI13.ConfNb=1
 Mcu.ThirdPartyNb=0
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_7
-RCC.HCLKFreq_Value=75000000
+RCC.HCLKFreq_Value=72000000
 ADC1.Resolution=ADC_RESOLUTION_12B
 Mcu.IPNb=15
 ProjectManager.PreviousToolchain=STM32CubeIDE
-RCC.SPDIFRXFreq_Value=75000000
+RCC.SPDIFRXFreq_Value=72000000
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PE6
-RCC.HRTIMFreq_Value=75000000
+RCC.HRTIMFreq_Value=72000000
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA5
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 I2C3.IPParameters=Timing
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
-RCC.DIVR3Freq_Value=129000000
+RCC.DIVR3Freq_Value=16125000
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Mcu.IP10=RCC
@@ -291,7 +295,7 @@ Mcu.IP12=SYS
 Mcu.IP11=SPI1
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
 ADC1.Rank-2\#ChannelRegularConversion=3
-RCC.DIVP1Freq_Value=75000000
+RCC.DIVP1Freq_Value=144000000
 Mcu.IP14=TIM2
 Mcu.IP13=TIM1
 PE13.Signal=GPXTI13
@@ -303,7 +307,7 @@ PE6.GPIOParameters=GPIO_Label
 Dma.RequestsNb=1
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 ProjectManager.ProjectName=ECU
-RCC.APB3Freq_Value=75000000
+RCC.APB3Freq_Value=72000000
 PCC.Seq0.Step0.Oscillator=HSE BYP PLL Flash-LP Cache-ON
 PD13.GPIO_Label=C_LED_GREEN
 PA6.Signal=ADCx_INP3
@@ -313,10 +317,10 @@ ProjectManager.ToolChainLocation=
 PD14.Locked=true
 SH.GPXTI5.ConfNb=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.DIVR1Freq_Value=75000000
+RCC.DIVR1Freq_Value=144000000
 PCC.Checker=true
 PCC.Seq0.Step0.Duration=1 s
-I2C3.Timing=0x109093DC
+I2C3.Timing=0x10808DD3
 PB5.GPIO_Label=C_RTDS
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 PCC.Seq0.Step0.Peripherals=Bridge_APB3 WWDG1 ADC1 Bridge_AHB1 Bridge_APB1 Bridge_APB2 FDCAN1 FDCAN2 I2C3 SPI1 TIM1 Bridge_AHB4 Bridge_APB4 GPIOA GPIOB GPIOC GPIOD GPIOE GPIOH LPUART1 SYS
@@ -326,9 +330,10 @@ PD6.Signal=GPXTI6
 Dma.Request0=ADC1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 PE12.Locked=true
-RCC.Tim2OutputFreq_Value=75000000
-RCC.DFSDMACLkFreq_Value=75000000
+RCC.Tim2OutputFreq_Value=72000000
+RCC.DFSDMACLkFreq_Value=72000000
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 SH.GPXTI5.0=GPIO_EXTI5
 PB8.GPIOParameters=GPIO_Label
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
@@ -340,7 +345,7 @@ PCC.Vdd=3.0
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.SAI4BFreq_Value=75000000
+RCC.SAI4BFreq_Value=72000000
 PC4.Signal=ADCx_INP4
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=S_VEL3
@@ -351,42 +356,42 @@ RCC.FamilyName=M
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PE15.GPIOParameters=GPIO_Label
 PD12.Locked=true
-RCC.SPI6Freq_Value=75000000
+RCC.SPI6Freq_Value=72000000
 SH.GPXTI6.0=GPIO_EXTI6
 PCC.Seq0.Step0.TaMax=120.69
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PA9.Mode=Asynchronous
-RCC.SPI45Freq_Value=75000000
+RCC.SPI45Freq_Value=72000000
 VP_SYS_VS_tim3.Mode=TIM3
 PE15.GPIO_Label=S_VEL4
 PD12.GPIOParameters=GPIO_Label
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
 ProjectManager.TargetToolchain=STM32CubeIDE
-RCC.VCO1OutputFreq_Value=150000000
+RCC.VCO1OutputFreq_Value=288000000
 Dma.ADC1.0.Mode=DMA_NORMAL
 PCC.Seq0.Step0.Mode=RUN
 Dma.ADC1.0.SyncSignalID=NONE
 PC5.GPIOParameters=GPIO_Label
-RCC.AXIClockFreq_Value=75000000
+RCC.AXIClockFreq_Value=72000000
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 SH.GPXTI12.ConfNb=1
 PE4.Locked=true
-RCC.USBFreq_Value=75000000
+RCC.USBFreq_Value=72000000
 PD3.Locked=true
 RCC.CKPERFreq_Value=64000000
 NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 board=custom
 PCC.Temperature=25
 SH.GPXTI3.0=GPIO_EXTI3
-RCC.VCOInput1Freq_Value=16000000
+RCC.VCOInput1Freq_Value=8000000
 Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-RCC.APB2Freq_Value=75000000
+RCC.APB2Freq_Value=72000000
 PCC.Seq0.Step0.Frequency=25 MHz
 MxCube.Version=5.6.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=B_DEBUG1
-RCC.FDCANFreq_Value=75000000
+RCC.FDCANFreq_Value=72000000
 RCC.ADCFreq_Value=150000000
 PD4.GPIOParameters=GPIO_Label
 PD14.GPIO_Label=C_LED_RED
@@ -394,7 +399,7 @@ PE5.Locked=true
 PE6.Signal=GPIO_Output
 ADC1.NbrOfConversion=6
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32H743VITx
 PE12.Signal=GPXTI12
@@ -407,8 +412,8 @@ Mcu.IP6=FREERTOS
 Mcu.IP7=I2C3
 ProjectManager.CoupleFile=false
 PCC.Seq0.Step0.Memory=SRAM1
-RCC.SYSCLKFreq_VALUE=75000000
-RCC.I2C123Freq_Value=75000000
+RCC.SYSCLKFreq_VALUE=144000000
+RCC.I2C123Freq_Value=72000000
 PA7.GPIO_Label=S_FREIO
 PA12.Mode=FDCANMaster
 SH.GPXTI4.0=GPIO_EXTI4
@@ -421,16 +426,16 @@ Dma.ADC1.0.SyncEnable=DISABLE
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 SH.GPXTI4.ConfNb=1
-RCC.SAI4AFreq_Value=75000000
+RCC.SAI4AFreq_Value=72000000
 ADC1.NbrOfConversionFlag=1
 SH.GPXTI15.0=GPIO_EXTI15
-RCC.DIVQ1Freq_Value=75000000
+RCC.DIVQ1Freq_Value=72000000
 PB8.Signal=GPIO_Input
 PC9.Signal=I2C3_SDA
 SH.ADCx_INP3.ConfNb=1
 PCC.Seq0.Step0.Vdd=3.0
-RCC.VCOInput2Freq_Value=16000000
-RCC.APB1Freq_Value=75000000
+RCC.VCOInput2Freq_Value=8000000
+RCC.APB1Freq_Value=72000000
 ProjectManager.DeviceId=STM32H743VITx
 PB12.Signal=FDCAN2_RX
 ProjectManager.LibraryCopy=1
