Parâmetros do DMA do ADC consertados no cubemx
Alterado modo de DMA do ADC de direto para circular
Aumentado prioridade do DMA do ADC

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -65,7 +65,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 RCC.DIVR2Freq_Value=75000000
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
 RCC.DIVP2Freq_Value=150000000
 SH.ADCx_INP3.0=ADC1_INP3,IN3-Single-Ended
 SH.ADCx_INP4.ConfNb=1
@@ -114,7 +114,7 @@ FREERTOS.Tasks01=t_main_task,24,128,main_task,As weak,NULL,Dynamic,NULL,NULL;t_c
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=41
 Dma.ADC1.0.SyncRequestNumber=1
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,master,Resolution
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,master,Resolution,ContinuousConvMode
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 RCC.SWPMI1Freq_Value=72000000
 PD3.Signal=GPXTI3
@@ -132,7 +132,7 @@ PCC.MCU=STM32H743VITx
 RCC.Tim1OutputFreq_Value=72000000
 RCC.SPI123Freq_Value=72000000
 Dma.ADC1.0.SignalID=NONE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 PA9.Signal=LPUART1_TX
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 RCC.DIVN2=18
@@ -202,7 +202,7 @@ Mcu.Pin16=PB13
 Mcu.Pin13=PE14
 Mcu.Pin14=PE15
 Mcu.Pin19=PD14
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
 SH.GPXTI15.ConfNb=1
 RCC.LPTIM345Freq_Value=72000000
 ProjectManager.ComputerToolchain=false
@@ -229,6 +229,7 @@ RCC.SAI1Freq_Value=72000000
 RCC.CortexFreq_Value=144000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32H743VITx
+ADC1.ContinuousConvMode=ENABLE
 RCC.HPRE=RCC_HCLK_DIV2
 PCC.Seq0.Step0.CPU_Frequency=72000000 Hz
 Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -368,7 +369,7 @@ PD12.GPIOParameters=GPIO_Label
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
 ProjectManager.TargetToolchain=STM32CubeIDE
 RCC.VCO1OutputFreq_Value=288000000
-Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 PCC.Seq0.Step0.Mode=RUN
 Dma.ADC1.0.SyncSignalID=NONE
 PC5.GPIOParameters=GPIO_Label
@@ -418,7 +419,7 @@ PA7.GPIO_Label=S_FREIO
 PA12.Mode=FDCANMaster
 SH.GPXTI4.0=GPIO_EXTI4
 ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
 KeepUserPlacement=false
 PC5.GPIO_Label=S_ADC_E1
 SH.ADCx_INP19.ConfNb=1
