--- a/ECU.ioc
+++ b/ECU.ioc
@@ -313,7 +313,7 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ECU.ioc
 ProjectManager.ProjectName=ECU
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=FDCAN
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
