--- a/ECU.ioc
+++ b/ECU.ioc
@@ -52,7 +52,7 @@ Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
-FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=t_main_task,24,128,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,128,controle,As external,NULL,Dynamic,NULL,NULL;t_comando_inver,8,128,comando_inversor,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,128,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,128,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,128,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,128,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,128,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,128,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,128,torque_manager,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configMINIMAL_STACK_SIZE=64
