Datalog support, bugfixes
- Datalog support implemented in data acquisition tasks
- General bugfixes, stack increase in all tasks

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -5,8 +5,10 @@ ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_7
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_8
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_19
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,master,Resolution,ContinuousConvMode
+ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Resolution,ContinuousConvMode,master,ClockPrescaler,ConversionDataManagement
 ADC1.NbrOfConversion=6
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -49,13 +51,17 @@ Dma.ADC1.0.SyncRequestNumber=1
 Dma.ADC1.0.SyncSignalID=NONE
 Dma.Request0=ADC1
 Dma.RequestsNb=1
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01
+FREERTOS.FootprintOK=false
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
-FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=t_main_task,24,128,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,128,controle,As external,NULL,Dynamic,NULL,NULL;t_comando_inver,8,128,comando_inversor,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,128,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,128,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,128,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,128,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,128,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,128,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,128,torque_manager,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=t_main_task,24,512,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,512,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,512,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,512,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,512,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,512,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,512,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,512,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,512,torque_manager,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configMINIMAL_STACK_SIZE=64
+FREERTOS.configTOTAL_HEAP_SIZE=25360
+FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
@@ -125,8 +131,8 @@ Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.1
+MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -146,7 +152,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM3_IRQn
@@ -154,9 +160,9 @@ NVIC.TimeBaseIP=TIM3
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
-PA11.Mode=FDCANMaster
+PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
-PA12.Mode=FDCANMaster
+PA12.Mode=FDCAN_Activate
 PA12.Signal=FDCAN1_TX
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
@@ -179,9 +185,9 @@ PA9.Signal=LPUART1_TX
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=S_ADC_E2
 PB1.Signal=ADCx_INP5
-PB12.Mode=FDCANSlave
+PB12.Mode=FDCAN_Activate
 PB12.Signal=FDCAN2_RX
-PB13.Mode=FDCANSlave
+PB13.Mode=FDCAN_Activate
 PB13.Signal=FDCAN2_TX
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
