Ajuste na configuração do ADC, função de debug
- Configurações do ADC no Cube ajustadas para melhor funcionamento
- Criada função de depuração geral

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -8,7 +8,8 @@ ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_19
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
 ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Resolution,ContinuousConvMode,master,ClockPrescaler,ConversionDataManagement
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Resolution,ContinuousConvMode,master,ClockPrescaler,ConversionDataManagement,EOCSelection,Overrun
 ADC1.NbrOfConversion=6
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -17,18 +18,19 @@ ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
 ADC1.Rank-2\#ChannelRegularConversion=3
 ADC1.Rank-3\#ChannelRegularConversion=4
 ADC1.Rank-4\#ChannelRegularConversion=5
 ADC1.Rank-5\#ChannelRegularConversion=6
-ADC1.Resolution=ADC_RESOLUTION_12B
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
+ADC1.Resolution=ADC_RESOLUTION_12B_OPT
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_387CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_8CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_16CYCLES_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_64CYCLES_5
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -41,7 +43,7 @@ Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestNumber=1
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.ADC1.0.SignalID=NONE
@@ -51,15 +53,16 @@ Dma.ADC1.0.SyncRequestNumber=1
 Dma.ADC1.0.SyncSignalID=NONE
 Dma.Request0=ADC1
 Dma.RequestsNb=1
-FREERTOS.FootprintOK=false
-FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configMINIMAL_STACK_SIZE,FootprintOK,Queues01,configMAX_TASK_NAME_LEN,Mutexes01,configENABLE_FPU,configTOTAL_HEAP_SIZE,configUSE_MALLOC_FAILED_HOOK,configUSE_STATS_FORMATTING_FUNCTIONS,configCHECK_FOR_STACK_OVERFLOW
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
 FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=t_main_task,24,512,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,512,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,512,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,512,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,512,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,512,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,512,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,512,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,512,torque_manager,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configMINIMAL_STACK_SIZE=64
-FREERTOS.configTOTAL_HEAP_SIZE=25360
+FREERTOS.configTOTAL_HEAP_SIZE=60360
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
