can do inversor setado pra 50kbps, can geral com valores melhores de bit timing

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -10,8 +10,8 @@ RCC.PLLFRACN=6144
 PD3.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=S_APPS1
-RCC.CpuClockFreq_Value=75000000
 PD4.Locked=true
+RCC.CpuClockFreq_Value=75000000
 SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
 PB13.Signal=FDCAN2_TX
 PD6.GPIO_Label=B_MODO
@@ -57,6 +57,7 @@ RCC.FMCFreq_Value=75000000
 PC4.GPIO_Label=S_VOLANTE
 PB1.GPIO_Label=S_ADC_E2
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+FDCAN1.NominalPrescaler=5
 RCC.USART16Freq_Value=75000000
 PE4.GPIO_Label=C_LED_DEBUG1
 PC9.Mode=I2C
@@ -90,10 +91,10 @@ PA5.GPIOParameters=GPIO_Label
 SH.GPXTI14.ConfNb=1
 RCC.TraceFreq_Value=75000000
 RCC.APB4Freq_Value=75000000
-FDCAN1.DataTimeSeg2=2
+FDCAN1.DataTimeSeg2=4
 RCC.CECFreq_Value=32000
 RCC.SAI23Freq_Value=75000000
-FDCAN1.DataTimeSeg1=13
+FDCAN1.DataTimeSeg1=27
 RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_HSE
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -185,9 +186,10 @@ Mcu.Pin25=PA12
 SH.ADCx_INP7.0=ADC1_INP7,IN7-Single-Ended
 Mcu.Pin28=PD3
 Mcu.Pin29=PD4
-FDCAN1.NominalSyncJumpWidth=2
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+FDCAN1.DataPrescaler=5
 PD14.GPIOParameters=GPIO_Label
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
+FDCAN1.NominalSyncJumpWidth=4
 PB5.Signal=GPIO_Output
 Mcu.Pin22=PA9
 Mcu.Pin23=PA10
@@ -234,7 +236,7 @@ PA7.GPIOParameters=GPIO_Label
 ADC1.Rank-5\#ChannelRegularConversion=6
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 Mcu.Family=STM32H7
-FDCAN2.DataSyncJumpWidth=3
+FDCAN2.DataSyncJumpWidth=2
 RCC.DIVQ2Freq_Value=75000000
 ProjectManager.MainLocation=Core/Src
 RCC.SAI1Freq_Value=75000000
@@ -243,7 +245,7 @@ ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32H743VITx
 ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.ContinuousConvMode=ENABLE
-FDCAN1.DataSyncJumpWidth=2
+FDCAN1.DataSyncJumpWidth=4
 PCC.Seq0.Step0.CPU_Frequency=72000000 Hz
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -323,7 +325,8 @@ PE6.GPIOParameters=GPIO_Label
 Dma.RequestsNb=1
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 FREERTOS.configTOTAL_HEAP_SIZE=60360
-FDCAN1.NominalTimeSeg1=13
+FDCAN1.NominalTimeSeg2=4
+FDCAN1.NominalTimeSeg1=27
 ProjectManager.ProjectName=ECU
 RCC.APB3Freq_Value=37500000
 PCC.Seq0.Step0.Oscillator=HSE BYP PLL Flash-LP Cache-ON
@@ -373,7 +376,7 @@ ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=S_VEL3
 PD5.Signal=GPXTI5
 ProjectManager.DeletePrevious=true
-FDCAN1.IPParameters=NominalSyncJumpWidth,NominalTimeSeg1,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,TxFifoQueueElmtsNbr
+FDCAN1.IPParameters=NominalSyncJumpWidth,NominalTimeSeg1,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg2,DataPrescaler
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 RCC.FamilyName=M
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
@@ -385,8 +388,8 @@ FDCAN2.MessageRAMOffset=1280
 PCC.Seq0.Step0.TaMax=120.69
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PA9.Mode=Asynchronous
-RCC.SPI45Freq_Value=75000000
 VP_SYS_VS_tim3.Mode=TIM3
+RCC.SPI45Freq_Value=75000000
 PE15.GPIO_Label=S_VEL4
 PD12.GPIOParameters=GPIO_Label
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
@@ -396,10 +399,10 @@ Dma.ADC1.0.Mode=DMA_CIRCULAR
 PCC.Seq0.Step0.Mode=RUN
 Dma.ADC1.0.SyncSignalID=NONE
 PC5.GPIOParameters=GPIO_Label
-FDCAN2.DataTimeSeg1=4
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
-FDCAN2.DataTimeSeg2=3
+FDCAN2.DataTimeSeg1=5
 RCC.AXIClockFreq_Value=75000000
+FDCAN2.DataTimeSeg2=2
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 SH.GPXTI12.ConfNb=1
 PE4.Locked=true
 ProjectManager.RegisterCallBack=FDCAN
