mudando baudrate de can geral pra 500kbps e corrigindo valores de tamanho da can

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -6,8 +6,10 @@ PD12.GPIO_Label=C_LED_BLUE
 SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 SH.GPXTI14.0=GPIO_EXTI14
+FDCAN2.RxFifo0ElmtsNbr=32
 RCC.PLLFRACN=6144
 PD3.GPIOParameters=GPIO_Label
+FDCAN1.RxBuffersNbr=32
 RCC.RTCFreq_Value=32000
 PA6.GPIO_Label=S_APPS1
 PD4.Locked=true
@@ -62,6 +64,7 @@ RCC.USART16Freq_Value=75000000
 PE4.GPIO_Label=C_LED_DEBUG1
 PC9.Mode=I2C
 FDCAN2.NominalSyncJumpWidth=2
+FDCAN2.TxEventsNbr=32
 PA8.Signal=I2C3_SCL
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -71,6 +74,7 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 RCC.DIVP2Freq_Value=37500000
 SH.ADCx_INP3.0=ADC1_INP3,IN3-Single-Ended
+FDCAN1.TxBuffersNbr=32
 SH.ADCx_INP4.ConfNb=1
 RCC.MCO2PinFreq_Value=75000000
 ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -129,9 +133,10 @@ PD13.GPIOParameters=GPIO_Label
 PD7.Signal=SPI1_MOSI
 RCC.DIVP2=4
 PCC.Line=STM32H743/753
+FDCAN2.TxBuffersNbr=32
 RCC.QSPIFreq_Value=75000000
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-FDCAN2.NominalTimeSeg1=5
+FDCAN2.NominalTimeSeg1=13
 RCC.D1CPREFreq_Value=75000000
 SH.GPXTI6.ConfNb=1
 PB8.GPIO_Label=BOOT1
@@ -221,7 +226,7 @@ Mcu.Pin18=PD13
 FREERTOS.Mutexes01=m_state_parameter_mutex,Dynamic,NULL
 RCC.LTDCFreq_Value=16125000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-FDCAN2.TxFifoQueueElmtsNbr=4
+FDCAN2.TxFifoQueueElmtsNbr=32
 Mcu.Pin11=PE12
 Mcu.Pin12=PE13
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
@@ -335,6 +340,7 @@ PA6.Signal=ADCx_INP3
 PB12.Mode=FDCAN_Activate
 RCC.D1PPRE=RCC_APB3_DIV2
 PD5.GPIO_Label=B_RTD
+FDCAN1.RxFifo0ElmtsNbr=32
 ProjectManager.ToolChainLocation=
 PD14.Locked=true
 SH.GPXTI5.ConfNb=1
@@ -355,6 +361,7 @@ SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 PE12.Locked=true
 RCC.Tim2OutputFreq_Value=75000000
 RCC.DFSDMACLkFreq_Value=75000000
+FDCAN2.RxFifo1ElmtsNbr=32
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 SH.GPXTI5.0=GPIO_EXTI5
@@ -376,7 +383,7 @@ ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=S_VEL3
 PD5.Signal=GPXTI5
 ProjectManager.DeletePrevious=true
-FDCAN1.IPParameters=NominalSyncJumpWidth,NominalTimeSeg1,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg2,DataPrescaler
+FDCAN1.IPParameters=NominalSyncJumpWidth,NominalTimeSeg1,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg2,DataPrescaler,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 RCC.FamilyName=M
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
@@ -399,7 +406,7 @@ Dma.ADC1.0.Mode=DMA_CIRCULAR
 PCC.Seq0.Step0.Mode=RUN
 Dma.ADC1.0.SyncSignalID=NONE
 PC5.GPIOParameters=GPIO_Label
-FDCAN2.DataTimeSeg1=5
+FDCAN2.DataTimeSeg1=13
 RCC.AXIClockFreq_Value=75000000
 FDCAN2.DataTimeSeg2=2
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
@@ -416,16 +423,18 @@ SH.GPXTI3.0=GPIO_EXTI3
 RCC.VCOInput1Freq_Value=8000000
 Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-FDCAN2.IPParameters=NominalTimeSeg1,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,MessageRAMOffset,TxFifoQueueElmtsNbr
+FDCAN2.IPParameters=NominalTimeSeg1,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,MessageRAMOffset,TxFifoQueueElmtsNbr,TxBuffersNbr,TxEventsNbr,RxBuffersNbr,RxFifo1ElmtsNbr,RxFifo0ElmtsNbr
 NVIC.SavedSystickIrqHandlerGenerated=true
 RCC.APB2Freq_Value=75000000
 PCC.Seq0.Step0.Frequency=25 MHz
+FDCAN1.RxFifo1ElmtsNbr=32
 MxCube.Version=6.2.1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=B_DEBUG1
 RCC.FDCANFreq_Value=8000000
 RCC.ADCFreq_Value=37500000
 PD4.GPIOParameters=GPIO_Label
+FDCAN1.TxEventsNbr=32
 PD14.GPIO_Label=C_LED_RED
 PE5.Locked=true
 PE6.Signal=GPIO_Output
@@ -460,6 +469,7 @@ NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 SH.GPXTI4.ConfNb=1
 RCC.SAI4AFreq_Value=75000000
+FDCAN2.RxBuffersNbr=32
 ADC1.NbrOfConversionFlag=1
 SH.GPXTI15.0=GPIO_EXTI15
 RCC.DIVQ1Freq_Value=75000000
@@ -470,7 +480,7 @@ PCC.Seq0.Step0.Vdd=3.0
 RCC.VCOInput2Freq_Value=8000000
 RCC.APB1Freq_Value=37500000
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
-FDCAN1.TxFifoQueueElmtsNbr=4
+FDCAN1.TxFifoQueueElmtsNbr=32
 ProjectManager.DeviceId=STM32H743VITx
 PB12.Signal=FDCAN2_RX
 ProjectManager.LibraryCopy=1
