--- a/ECU.ioc
+++ b/ECU.ioc
@@ -37,7 +37,7 @@ PD4.Signal=GPXTI4
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
 RCC.DIVQ3Freq_Value=16125000
-SPI1.CalculateBaudRate=292.968 KBits/s
+SPI1.CalculateBaudRate=195.312 KBits/s
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 FREERTOS.configMINIMAL_STACK_SIZE=64
@@ -97,7 +97,7 @@ RCC.TraceFreq_Value=75000000
 RCC.APB4Freq_Value=75000000
 FDCAN1.DataTimeSeg2=4
 RCC.CECFreq_Value=32000
-RCC.SAI23Freq_Value=75000000
+RCC.SAI23Freq_Value=50000000
 FDCAN1.DataTimeSeg1=27
 RCC.FDCANCLockSelection=RCC_FDCANCLKSOURCE_HSE
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -120,6 +120,7 @@ PCC.Seq0.Step0.Category=Interpolation
 PD6.GPIOParameters=GPIO_Label
 ProjectManager.ProjectFileName=ECU.ioc
 Dma.ADC1.0.Instance=DMA1_Stream0
+RCC.DIVQ1=3
 FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL;t_debugleds,8,1024,debugleds,As external,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=41
@@ -143,7 +144,7 @@ PB8.GPIO_Label=BOOT1
 RCC.USART234578Freq_Value=37500000
 PCC.MCU=STM32H743VITx
 RCC.Tim1OutputFreq_Value=75000000
-RCC.SPI123Freq_Value=75000000
+RCC.SPI123Freq_Value=50000000
 Dma.ADC1.0.SignalID=NONE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 PA9.Signal=LPUART1_TX
@@ -244,7 +245,7 @@ Mcu.Family=STM32H7
 FDCAN2.DataSyncJumpWidth=2
 RCC.DIVQ2Freq_Value=75000000
 ProjectManager.MainLocation=Core/Src
-RCC.SAI1Freq_Value=75000000
+RCC.SAI1Freq_Value=50000000
 RCC.CortexFreq_Value=75000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32H743VITx
@@ -281,7 +282,7 @@ PE4.GPIOParameters=GPIO_Label
 TIM1.Prescaler=1799
 Mcu.UserConstants=
 RCC.DIVP3Freq_Value=16125000
-RCC.SDMMCFreq_Value=75000000
+RCC.SDMMCFreq_Value=50000000
 SH.GPXTI13.ConfNb=1
 Mcu.ThirdPartyNb=0
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_7
@@ -290,7 +291,7 @@ RCC.HCLKFreq_Value=75000000
 Mcu.IPNb=15
 ADC1.Resolution=ADC_RESOLUTION_12B_OPT
 ProjectManager.PreviousToolchain=STM32CubeIDE
-RCC.SPDIFRXFreq_Value=75000000
+RCC.SPDIFRXFreq_Value=50000000
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
@@ -360,7 +361,7 @@ Dma.Request0=ADC1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 PE12.Locked=true
 RCC.Tim2OutputFreq_Value=75000000
-RCC.DFSDMACLkFreq_Value=75000000
+RCC.DFSDMACLkFreq_Value=50000000
 FDCAN2.RxFifo1ElmtsNbr=32
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
@@ -376,14 +377,14 @@ ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 NVIC.SavedSvcallIrqHandlerGenerated=true
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.SAI4BFreq_Value=75000000
+RCC.SAI4BFreq_Value=50000000
 PC4.Signal=ADCx_INP4
 RCC.D2PPRE1=RCC_APB1_DIV2
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=S_VEL3
 PD5.Signal=GPXTI5
 ProjectManager.DeletePrevious=true
-FDCAN1.IPParameters=NominalSyncJumpWidth,NominalTimeSeg1,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg2,DataPrescaler,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr
+FDCAN1.IPParameters=RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,NominalTimeSeg2,NominalPrescaler,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 RCC.FamilyName=M
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
@@ -413,7 +414,7 @@ ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 SH.GPXTI12.ConfNb=1
 PE4.Locked=true
 ProjectManager.RegisterCallBack=FDCAN
-RCC.USBFreq_Value=75000000
+RCC.USBFreq_Value=50000000
 PD3.Locked=true
 RCC.CKPERFreq_Value=64000000
 NVIC.TIM1_TRG_COM_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -423,7 +424,7 @@ SH.GPXTI3.0=GPIO_EXTI3
 RCC.VCOInput1Freq_Value=8000000
 Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-FDCAN2.IPParameters=NominalTimeSeg1,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,MessageRAMOffset,TxFifoQueueElmtsNbr,TxBuffersNbr,TxEventsNbr,RxBuffersNbr,RxFifo1ElmtsNbr,RxFifo0ElmtsNbr
+FDCAN2.IPParameters=TxFifoQueueElmtsNbr,TxBuffersNbr,TxEventsNbr,RxBuffersNbr,RxFifo1ElmtsNbr,RxFifo0ElmtsNbr,NominalSyncJumpWidth,NominalTimeSeg1,DataTimeSeg1,DataSyncJumpWidth,DataTimeSeg2,MessageRAMOffset
 NVIC.SavedSystickIrqHandlerGenerated=true
 RCC.APB2Freq_Value=75000000
 PCC.Seq0.Step0.Frequency=25 MHz
@@ -440,7 +441,7 @@ PE5.Locked=true
 PE6.Signal=GPIO_Output
 ADC1.NbrOfConversion=6
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANCLockSelection,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANCLockSelection,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32H743VITx
 PE12.Signal=GPXTI12
@@ -468,11 +469,11 @@ Dma.ADC1.0.SyncEnable=DISABLE
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 SH.GPXTI4.ConfNb=1
-RCC.SAI4AFreq_Value=75000000
+RCC.SAI4AFreq_Value=50000000
 FDCAN2.RxBuffersNbr=32
 ADC1.NbrOfConversionFlag=1
 SH.GPXTI15.0=GPIO_EXTI15
-RCC.DIVQ1Freq_Value=75000000
+RCC.DIVQ1Freq_Value=50000000
 PB8.Signal=GPIO_Input
 PC9.Signal=I2C3_SDA
 SH.ADCx_INP3.ConfNb=1
