criando tarefa do led RGB

--- a/ECU.ioc
+++ b/ECU.ioc
@@ -1,14 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
 PD7.Mode=Full_Duplex_Master
 PCC.Series=STM32H7
-FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL;q_debugleds_message,16,debugled_message_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=q_speed_message,16,speed_message_t,0,Dynamic,NULL,NULL;q_torque_message,16,torque_message_t,0,Dynamic,NULL,NULL;q_ref_torque_message,16,ref_torque_t,0,Dynamic,NULL,NULL;q_datalog_message,128,datalog_message_t,0,Dynamic,NULL,NULL;q_debugleds_message,16,debugled_message_t,0,Dynamic,NULL,NULL;q_rgb_led_message,16,rgb_led_message_t,0,Dynamic,NULL,NULL
 PD12.GPIO_Label=C_LED_BLUE
 SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 SH.GPXTI14.0=GPIO_EXTI14
-
 FDCAN2.RxFifo0ElmtsNbr=32
-
 RCC.PLLFRACN=6144
 PD3.GPIOParameters=GPIO_Label
 FDCAN1.RxBuffersNbr=32
@@ -123,7 +121,7 @@ PD6.GPIOParameters=GPIO_Label
 ProjectManager.ProjectFileName=ECU.ioc
 Dma.ADC1.0.Instance=DMA1_Stream0
 RCC.DIVQ1=3
-FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL;t_debugleds,8,1024,debugleds,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=t_main_task,24,1024,main_task,As weak,NULL,Dynamic,NULL,NULL;t_controle,8,1024,controle,As external,NULL,Dynamic,NULL,NULL;t_datalogger,8,1024,datalogger,As external,NULL,Dynamic,NULL,NULL;t_throttle_read,8,1024,throttle_read,As external,NULL,Dynamic,NULL,NULL;t_steering_read,8,1024,steering_read,As external,NULL,Dynamic,NULL,NULL;t_speed_calc,8,1024,speed_calc,As external,NULL,Dynamic,NULL,NULL;t_odometer_calc,8,1024,odometer_calc,As external,NULL,Dynamic,NULL,NULL;t_thr_handler,8,1024,throttle_handler,As external,NULL,Dynamic,NULL,NULL;t_torque_manager,8,1024,torque_manager,As external,NULL,Dynamic,NULL,NULL;t_debugleds,8,1024,debugleds,As external,NULL,Dynamic,NULL,NULL;t_rgb_led,8,1024,rgb_led,As external,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.PinsNb=41
 Dma.ADC1.0.SyncRequestNumber=1
@@ -136,12 +134,10 @@ PD13.GPIOParameters=GPIO_Label
 PD7.Signal=SPI1_MOSI
 RCC.DIVP2=4
 PCC.Line=STM32H743/753
-
 FDCAN2.TxBuffersNbr=32
 RCC.QSPIFreq_Value=75000000
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 FDCAN2.NominalTimeSeg1=13
-
 RCC.D1CPREFreq_Value=75000000
 SH.GPXTI6.ConfNb=1
 PB8.GPIO_Label=BOOT1
@@ -400,7 +396,6 @@ FDCAN2.MessageRAMOffset=1280
 PCC.Seq0.Step0.TaMax=120.69
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PA9.Mode=Asynchronous
-RCC.SPI45Freq_Value=75000000
 VP_SYS_VS_tim3.Mode=TIM3
 RCC.SPI45Freq_Value=75000000
 PE15.GPIO_Label=S_VEL4
